# 25-05-28-GEN-AI

./: .env.example  .gitignore  Lithuanian.md  README.md  Vertinimai.xlsx  data.json  data.txt  log.txt  output.csv  output.json  plan.md  prompt.txt  requirements.txt
examples/: local_llm_call.py  python_advanced_variables.py  python_basics.py  repetition.py
examples/RAG/: data_collector.py  data_search.py  ollama_embedding.py  papildomi_duomenys.txt  source.txt
examples/_databases/: mongo.ipynb  sql.ipynb
examples/_fastapi_demo/: initializer.py  main.py  models.py  product_database.csv  product_registrator.py  requester.py
examples/_jupyter_notebooks/: test.ipynb
examples/email_sending_agent/: bday_filter.py  csv_reader.py  main.py  tools.py
examples/environment_reading_example/: script_reading_env.py
examples/fastapi_demo/: initializer.py  main.py  models.py  product_database.csv  product_registrator.py  tutorial.db
examples/google_genai/: code_execution_tool.py  embedding.py  image_recognition.py  llm_call.py  pdf_reader.py  structured_output.py  tool_calls.py  tts.py  web_search_tool.py
examples/json_mode/: json_llm_call_example.py
examples/langchain_examples/: anyksciai.txt  langchain_chaining_actions.py  langchain_text_chunking.py  llm_call.py  (+2 more)
examples/mcp_demo/: README.md  main.py  pyproject.toml  web_search.py
examples/tasker/: error.json  google_auth.py  google_services.py  main.py  models.py  pyproject.toml
homework/: 2025-05-29.MD  2025-05-30.MD  2025-06-02.MD  2025-06-03.MD  2025-06-04.MD  2025-06-06.MD  2025-06-09.MD  2025-06-10.MD
(+66 files in other folders)
